array.island.Island.scala.error
Compilation error:
Island:7: error: value length is not a member of Int
  for (i<-1 to num.length-1){
                   ^Island:8: error: Int does not take parameters
    if (num(i+1) > num(i)){
           ^Island:8: error: Int does not take parameters
    if (num(i+1) > num(i)){
                      ^