array.island.Island.scala.code


def island(num:Array[Int]): Int = {
  var num = 0

  for (i<-1 to num.length-1){
    if (num(i+1) > num(i)){
      num = num + 1
    }
       }  
  return num
}
